Fixed logo spacing in homepage titlebar.

--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -239,6 +239,14 @@ ion-title {
   color: var(--ion-color-secondary);
 }
 
+.hometitle {
+  line-height: 40px;
+  padding-left: 45px;
+  background: url('../../logo.jpg') no-repeat left center;
+  background-position-x: 5px;
+  background-size: auto 35px;
+}
+
 ion-back-button {
   color: var(--ion-color-secondary);
 }
